--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ Keras-Preprocessing==1.0.9
 kiwisolver==1.0.1
 Markdown==3.1
 MarkupSafe==1.1.1
-matplotlib==3.0.3
+matplotlib>=3.3.4
 mock==2.0.0
 nibabel==2.4.0
 numpy==1.16.2
