--- a/requirements.txt
+++ b/requirements.txt
@@ -27,7 +27,7 @@ pyparsing==2.3.1
 pypulseq==1.3.1.post1
 python-dateutil==2.8.0
 PyYAML==5.1
-scipy==1.2.1
+scipy>=1.2.1
 six==1.12.0
 tensorboard==1.13.1
 tensorflow==1.13.1
