--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ MarkupSafe==1.1.1
 matplotlib>=3.3.4
 mock==2.0.0
 nibabel==2.4.0
-numpy==1.16.2
+numpy>=1.16.2
 opencv-python==4.0.0.21
 pbr==5.1.3
 Pillow==6.0.0
