--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ h5py==2.9.0
 itsdangerous==1.1.0
 Jinja2==2.10.1
 Keras==2.2.4
-Keras-Applications==1.0.7
+Keras-Applications>=1.0.7
 Keras-Preprocessing==1.0.9
 kiwisolver==1.0.1
 Markdown==3.1
