--- a/requirements.txt
+++ b/requirements.txt
@@ -31,7 +31,7 @@ scipy>=1.2.1
 six==1.12.0
 tensorboard>=1.13.1
 tensorflow==1.15.2
-tensorflow-estimator==1.13.0
+tensorflow-estimator>=1.13.0
 termcolor==1.1.0
 Werkzeug==0.15.2
 scikit-image==0.15.0
