--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,7 @@ Click==7.0
 cycler==0.10.0
 Flask==1.0.2
 gast==0.2.2
-grpcio==1.20.0
-h5py==2.9.0
+grpcio>=1.20.0
 itsdangerous==1.1.0
 Jinja2==2.10.1
 Keras==2.2.4
@@ -18,7 +17,7 @@ matplotlib>=3.3.4
 mock==2.0.0
 nibabel==2.4.0
 numpy>=1.16.2
-opencv-python==4.0.0.21
+opencv-python>=4.0.0.21
 pbr==5.1.3
 Pillow>=6.0.0
 protobuf==3.7.1
@@ -30,11 +29,11 @@ PyYAML==5.1
 scipy>=1.2.1
 six==1.12.0
 tensorboard>=1.13.1
-tensorflow==1.15.2
+tensorflow>=1.15.2
 tensorflow-estimator>=1.13.0
 termcolor==1.1.0
 Werkzeug==0.15.2
-scikit-image==0.15.0
-h5py==2.9.0
+scikit-image>=0.15.0
+h5py>=2.9.0
 
 selenium==3.141.0
