--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,7 @@ numpy>=1.16.2
 opencv-python>=4.0.0.21
 pbr==5.1.3
 Pillow>=6.0.0
-protobuf==3.7.1
+protobuf>=3.7.1
 pydicom==1.2.2
 pyparsing==2.3.1
 pypulseq==1.3.1.post1
@@ -35,5 +35,4 @@ termcolor==1.1.0
 Werkzeug==0.15.2
 scikit-image>=0.15.0
 h5py>=2.9.0
-
 selenium==3.141.0
