--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-absl-py==0.7.1
+absl-py>=0.7.1
 astor==0.7.1
 Click==7.0
 cycler==0.10.0
@@ -29,7 +29,7 @@ PyYAML==5.1
 scipy>=1.2.1
 six==1.12.0
 tensorboard==1.13.1
-tensorflow>=1.15.2
+tensorflow==1.15.2
 tensorflow-estimator>=1.13.0
 termcolor==1.1.0
 Werkzeug>=0.15.2
