--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,9 @@ gast==0.2.2
 grpcio>=1.20.0
 itsdangerous==1.1.0
 Jinja2==2.10.1
-Keras==2.2.4
+Keras>=2.2.4
 Keras-Applications>=1.0.7
-Keras-Preprocessing==1.0.9
+Keras-Preprocessing>=1.0.9
 kiwisolver==1.0.1
 Markdown==3.1
 MarkupSafe==1.1.1
