--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ itsdangerous==1.1.0
 Jinja2==2.10.1
 Keras>=2.2.4
 Keras-Applications>=1.0.7
-Keras-Preprocessing>=1.0.9
+Keras-Preprocessing>=1.1.1
 kiwisolver==1.0.1
 Markdown==3.1
 MarkupSafe==1.1.1
@@ -28,7 +28,7 @@ python-dateutil==2.8.0
 PyYAML==5.1
 scipy>=1.2.1
 six==1.12.0
-tensorboard==1.13.1
+tensorboard>=1.13.1
 tensorflow>=1.15.2
 tensorflow-estimator>=1.13.0
 termcolor==1.1.0
